# Laboratorio-Final-Principios-de-Informatica

./: LICENSE  laboratorio_integrado_bibliotecas.ipynb  numpyless.py  pyproject.toml  sistema_de_calificacion.py
.devcontainer/: devcontainer.json
